--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,15 @@
     <p><a href="../src/index.html">Dev</a> / <a href="../dist/index.html">Production</a></p>
     <div class="list" id="list"></div>
     <!-- build:js -->
-    <script src="../node_modules/babel/node_modules/babel-core/browser.js"></script>
-    <script src="modules/app/app.js" type="text/babel"></script>
-    <script src="modules/list/list.js" type="text/babel"></script>
+    <script src="../node_modules/babel-browser/browser.js"></script>
+    <script src="../node_modules/es6-module-loader/dist/es6-module-loader.js"></script>
+    <script src="app.js" type="text/babel"></script>
+    <script src="list.js" type="text/babel"></script>
+    <!--<script src="../node_modules/angular/angular.js"></script>
+    <script src="modules/bootstrap.js" type="text/babel"></script>
+    <script src="modules/main.js" type="text/babel"></script>
+    <script src="modules/user.controller.js" type="text/babel"></script>
+    <script src="modules/user.service.js" type="text/babel"></script>-->
     <!-- endbuild -->
 </body>
 </html>
