--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,7 @@
     <meta name="description" content="" />
     <meta name=viewport content="width=device-width,initial-scale=1" />
     <!-- build:css -->
-    <link rel="stylesheet" href="modules/app/app.css" />
-    <link rel="stylesheet" href="modules/list/list.css" />
+    <link rel="stylesheet" href="modules/all.css" />
     <!-- endbuild -->
 </head>
 <body class="app">
@@ -22,15 +21,7 @@
     <p><a href="../src/index.html">Dev</a> / <a href="../dist/index.html">Production</a></p>
     <div class="list" id="list"></div>
     <!-- build:js -->
-    <script src="../node_modules/babel-browser/browser.js"></script>
-    <script src="../node_modules/es6-module-loader/dist/es6-module-loader.js"></script>
-    <script src="app.js" type="text/babel"></script>
-    <script src="list.js" type="text/babel"></script>
-    <!--<script src="../node_modules/angular/angular.js"></script>
-    <script src="modules/bootstrap.js" type="text/babel"></script>
-    <script src="modules/main.js" type="text/babel"></script>
-    <script src="modules/user.controller.js" type="text/babel"></script>
-    <script src="modules/user.service.js" type="text/babel"></script>-->
+    <script src="modules/all.js"></script>
     <!-- endbuild -->
 </body>
 </html>
