--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,14 @@
         <li>Automated build tasks to create ES5 versions of js for production environments</li>
         <li>Combine static files and minify ready for production</li>
     </ul>
-    <p><a href="../src/index.html">Dev</a> / <a href="../dist/index.html">Production</a></p>
+    <p><a href="../src/index.html">Dev</a> / <a href="../build/index.html">Production</a></p>
     <div class="list" id="list"></div>
     <!-- build:js -->
-    <script src="modules/all.js"></script>
+    <script src="../jspm_packages/system.js"></script>
+    <script src="../config.js"></script>
+    <script>
+        System.import('./modules/app/app.js');
+    </script>
     <!-- endbuild -->
 </body>
 </html>
