Added image magnification

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <!-- endbuild -->
 </head>
 <body class="app">
-    <h1>ES6 Modules</h1>
+    <img src="img/es6-logo.png" alt="ES6" />
     <p>Base project template for ES6 modules including:</p>
     <ul>
         <li>Server with live reload of static files</li>
