Renamed build folder to www

--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,12 @@
     <p>Base project template for ES6 modules including:</p>
     <ul>
         <li>Server with live reload of static files</li>
-        <li>Compile and run ES6 scripts in your browser on-the-fly</li>
-        <li>Automated build tasks to create ES5 versions of js for production environments</li>
-        <li>Combine static files and minify ready for production</li>
+        <li>Compile tasks to run ES6 JavaScript and SASS CSS in the browser</li>
+        <li>Optimise tasks to create concatenated and minified ES5 versions for production environments</li>
+        <li>Test tasks to automate unit tests and functional tests</li>
+        <li>Document tasks to automatically create documentation from the code</li>
     </ul>
-    <p><a href="../src/index.html">Dev</a> / <a href="../build/index.html">Production</a></p>
+    <p><a href="../src/index.html">Dev</a> / <a href="../www/index.html">Production</a></p>
     <div class="list" id="list"></div>
     <!-- build:js -->
     <script src="../jspm_packages/system.js"></script>
