--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>ES6 Modules</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link rel="stylesheet" href="assets/icomoon.css" />
     <!-- build:css -->
     <link rel="stylesheet" href="modules/all.css" />
     <!-- endbuild -->
@@ -15,7 +16,6 @@
         <ul>
             <li class="btn">
                 <a href="#" class="navicon-button" aria-label="Toggle Navigation"><span class="navicon"></span></a>
-<!--                <a href="#" class="btn-link">&#9776;</a>-->
                 <ul class="menu">
                     <li><a href="#wide">Widescreen</a></li>
                     <li><a href="#tabs">Tabs</a></li>
@@ -39,11 +39,11 @@
         <div class="anchor" id="tabs"></div>
         <div class="section tabs tabs-full">
             <input id="tab1" type="radio" name="tabs" checked />
-            <label for="tab1">About</label>
+            <label for="tab1"><span class="icon-library_books"></span> About</label>
             <input id="tab2" type="radio" name="tabs" />
-            <label for="tab2">Features</label>
+            <label for="tab2"><span class="icon-list"></span> Features</label>
             <input id="tab3" type="radio" name="tabs" />
-            <label for="tab3">Contact</label>
+            <label for="tab3"><span class="icon-contact_mail"></span> Contact</label>
             <div class="tabs-wrap">
                 <div class="tab" id="tab1content">
                     <p>Base project template for ES6 modules including:</p>
@@ -54,7 +54,7 @@
                         <li>Test tasks to automate unit tests and functional tests</li>
                         <li>Document tasks to automatically create documentation from the code</li>
                     </ul>
-                    <p><a href="../src/index.html">Dev</a> / <a href="../www/index.html">Production</a></p>
+                    <p><a href="../src/index.html"><span class="icon-devices_other"></span> Dev</a> / <a href="../www/index.html"><span class="icon-tv"></span> Production</a></p>
                     <div class="list" id="list"></div>
                 </div>
                 <div class="tab" id="tab2content"><p>Morbi at nunc vel diam dictum eleifend et ut est. Sed sed justo rutrum, fringilla est a, iaculis nulla.</p></div>
