Webdriverio 2.4.5 to support webdrivercss screenshot comparison

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="stylesheet" href="assets/icomoon.css" />
     <!-- build:css -->
-    <link rel="stylesheet" href="modules/all.css" />
+    <link rel="stylesheet" href="components/all.css" />
     <!-- endbuild -->
 </head>
 <body>
@@ -100,9 +100,9 @@
     </div>
     <!-- build:js -->
     <script src="../jspm_packages/system.js"></script>
-    <script src="../config.js"></script>
+    <script src="../jspm.conf.js"></script>
     <script>
-        System.import('./modules/all/all.js');
+        System.import('./components/all.js');
     </script>
     <!-- endbuild -->
 </body>
