replaced icomoon with google material icons
add live styleguide for easy reference

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>ES6 Modules</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="stylesheet" href="assets/icomoon.css" />
+    <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons" />
     <!-- build:css -->
     <link rel="stylesheet" href="components/all.css" />
     <!-- endbuild -->
@@ -38,12 +38,12 @@
         </div>
         <div class="anchor" id="tabs"></div>
         <div class="section tabs tabs-full">
-            <input id="tab1" type="radio" name="tabs" checked />
-            <label for="tab1"><span class="icon-library_books"></span> About</label>
-            <input id="tab2" type="radio" name="tabs" />
-            <label for="tab2"><span class="icon-list"></span> Features</label>
-            <input id="tab3" type="radio" name="tabs" />
-            <label for="tab3"><span class="icon-contact_mail"></span> Contact</label>
+            <input id="tab1" type="radio" name="tabs" class="tab-input" checked />
+            <label for="tab1" class="tab-label tab1"><i class="material-icons">info</i> About</label>
+            <input id="tab2" type="radio" name="tabs" class="tab-input" />
+            <label for="tab2" class="tab-label tab2"><i class="material-icons">people</i> Team</label>
+            <input id="tab3" type="radio" name="tabs" class="tab-input" />
+            <label for="tab3" class="tab-label tab3"><i class="material-icons">lock</i> Collaborate</label>
             <div class="tabs-wrap">
                 <div class="tab" id="tab1content">
                     <p>Base project template for ES6 modules including:</p>
