Toggle navigation menu icon using css only

--- a/src/index.html
+++ b/src/index.html
@@ -13,16 +13,13 @@
 <body>
     <div class="header">
         <a href="#" class="logo">es6 modules</a>
-        <ul>
-            <li class="btn">
-                <a href="#" class="navicon-button" aria-label="Toggle Navigation"><span class="navicon"></span></a>
-                <ul class="menu">
-                    <li><a href="#wide">Widescreen</a></li>
-                    <li><a href="#tabs">Tabs</a></li>
-                    <li><a href="#grid">Grid</a></li>
-                    <li><a href="#ratio">Fit ratio</a></li>
-                </ul>
-            </li>
+        <input class="menu-btn" type="checkbox" id="menu-btn" />
+        <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+        <ul class="menu">
+            <li><a href="#wide">Widescreen</a></li>
+            <li><a href="#tabs">Tabs</a></li>
+            <li><a href="#grid">Grid</a></li>
+            <li><a href="#ratio">Fit ratio</a></li>
         </ul>
     </div>
     <div class="main">
